--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/apple-touch-icon-precomposed.png" rel="apple-touch-icon">
 
-    <link rel="stylesheet" type="text/css" href="//jaganz.github.io/themes/uno/assets/css/uno.css?v=1475079392746" />
+    <link rel="stylesheet" type="text/css" href="//jaganz.github.io/themes/uno/assets/css/uno.css?v=1475079849058" />
 
     <link rel="canonical" href="https://jaganz.github.io/" />
     <meta name="referrer" content="origin" />
@@ -52,7 +52,7 @@ null
         <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
     </span>
 
-    <header class="panel-cover  " >
+    <header class="panel-cover  " style="background-image: url(happiness.jpg)">
       <div class="panel-main">
     
         <div class="panel-main__inner panel-inverted">
@@ -143,7 +143,7 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script type="text/javascript" src="//jaganz.github.io/themes/uno/assets/js/main.js?v=1475079392746"></script>
+    <script type="text/javascript" src="//jaganz.github.io/themes/uno/assets/js/main.js?v=1475079849058"></script>
     
 
 </body>
