--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/apple-touch-icon-precomposed.png" rel="apple-touch-icon">
 
-    <link rel="stylesheet" type="text/css" href="//jaganz.github.io/themes/uno/assets/css/uno.css?v=1475080167258" />
+    <link rel="stylesheet" type="text/css" href="//jaganz.github.io/themes/uno/assets/css/uno.css?v=1475080406428" />
 
     <link rel="canonical" href="https://jaganz.github.io/" />
     <meta name="referrer" content="origin" />
@@ -59,7 +59,7 @@ null
         <div class="panel-main__inner panel-inverted">
         <div class="panel-main__content">
     
-            <a href="https://jaganz.github.io" title="link to homepage for Ilario aka &quot;Yayo&quot; aka &quot;jaganz&quot;&#x27;s blog"><img src="https://jaganz.github.io/images/bomb_icon.jpg" width="80" alt="Ilario aka &quot;Yayo&quot; aka &quot;jaganz&quot;&#x27;s blog logo" class="panel-cover__logo logo" /></a>
+            <a href="https://jaganz.github.io" title="link to homepage for Ilario aka &quot;Yayo&quot; aka &quot;jaganz&quot;&#x27;s blog"><img src="https://jaganz.github.io/images/ss2.png" width="80" alt="Ilario aka &quot;Yayo&quot; aka &quot;jaganz&quot;&#x27;s blog logo" class="panel-cover__logo logo" /></a>
             <h1 class="panel-cover__title panel-title"><a href="https://jaganz.github.io" title="link to homepage for Ilario aka &quot;Yayo&quot; aka &quot;jaganz&quot;&#x27;s blog">Ilario aka &quot;Yayo&quot; aka &quot;jaganz&quot;&#x27;s blog</a></h1>
             <hr class="panel-cover__divider" />
             <p class="panel-cover__description"></p>
@@ -145,7 +145,7 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script type="text/javascript" src="//jaganz.github.io/themes/uno/assets/js/main.js?v=1475080167258"></script>
+    <script type="text/javascript" src="//jaganz.github.io/themes/uno/assets/js/main.js?v=1475080406428"></script>
     
 
 </body>
